# llm-commit

./: LICENSE  README.md  commit.py  pyproject.toml
llm_commit/: plugin.py
